[FIX] fix content overflow on result page

--- a/assets/css/result-page.css
+++ b/assets/css/result-page.css
@@ -3,7 +3,6 @@
 	justify-content: center;
 	position: relative;
 	background-color: #f1dddd;
-	height: 100%;
 
 	.cs-bg-img {
 		opacity: 0.7;
